Assertion failure (m_text) in RenderText::RenderText() at icanhascheezburger.com https://bugs.webkit.org/show_bug.cgi?id=71085

Reviewed by Jon Honeycutt.

Source/WebCore:

Test: fast/css-generated-content/attr-missing.html

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::applyProperty): If the element does not have the attribute specified
in the attr() function in the content property, set the content to the empty string, per
<http://www.w3.org/TR/CSS21/generate.html#content>.

LayoutTests:

* fast/css-generated-content/attr-missing-expected.txt: Added.
* fast/css-generated-content/attr-missing.html: Added.



Canonical link: https://commits.webkit.org/87300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98675 268f45cc-cd09-0410-ab3c-d52691b4dbfc